  *     such as data sample rates
  *   - Added new EVENT_Audio_Device_StreamStartStop() event to the Audio Device Class driver to detect stream start/stop events
  *   - Added board driver support for the Busware TUL board
  *   - Added new Host mode Audio Class driver
  *  - Library Applications:
  *   - Added RNDIS device mode to the Webserver project
  *   - Added new incomplete AndroidAccessoryHost Host LowLevel demo
  *   - Added new MediaControl project
  *   - Added new AudioInputHost Host ClassDriver demo
  *   - Added new AudioOutputHost Host ClassDriver demo
  *   - Added new AudioInputHost Host LowLevel demo
  *   - Added new AudioOutputHost Host LowLevel demo
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Added support for the Audio class GET STATUS request so that it is correctly ACKed when sent by the host
  *   - Altered the definition of the USB_Audio_Descriptor_Format_t descriptor so that the user is now responsible for supplying
  *     the supported audio sampling rates, to allow for multiple audio interfaces with different numbers of supported rates and/or
  *     continuous sample rates
  *   - Pipe_BoundEndpointNumber() has been renamed to Pipe_GetBoundEndpointAddress(), and now returns the correct endpoint direction
  *     as part of the endpoint address
  *  - Library Applications:
  *   - Modified the Low Level and Class Driver AudioInput and AudioOutput demos to support multiple sample rates
  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Large number of documentation and code comment corrections (thanks to Andrewy from Microsin.ru)
  *  - Library Applications:
  *   - Fixed incorrect signature in the CDC and DFU class bootloaders for the ATMEGA8U2
  *   - Fixed KeyboardHost and KeyboardHostWithParser demos displaying incorrect values when numerical keys were pressed
  *   - Fixed compile errors in the incomplete BluetoothHost demo application (thanks to Timo Lindfors)
  *
  *  \section Sec_ChangeLog110528 Version 110528
  *  <b>New:</b>